# developer-toolkit

./: README.md  pyproject.toml
docs/: learning_journal.md
examples/csv/: cleaned_customers.csv  messy_customers.csv
examples/json/: messy.json  messy_formatted.json  result.json  sorted_result.json
practice/: lesson01_json_basics.py  lesson02_sorting_lists_dictionaries.py
src/developer_toolkit/: csv_cleaner.py  file_renamer.py  json_formatter.py  password_generator.py
tests/: test_csv_cleaner.py  test_file_renamer.py  test_json_formatter.py  test_password_generator.py
