[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-toolkit"
version = "0.1.0"
description = "Small Python command-line tools for AI engineering foundation practice."
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]